# claude-goggles

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.superpowers/brainstorm/13828-1774489236/: .server-stopped  layout-options.html
.superpowers/brainstorm/92262-1774410830/: .server-stopped  approaches.html  layout.html
docs/superpowers/plans/: 2026-03-24-claude-goggles.md  2026-03-25-bloom-params.md  2026-03-25-bloom-renderer.md  2026-03-26-repo-quality.md
docs/superpowers/specs/: 2026-03-24-claude-goggles-design.md  2026-03-25-bloom-params-design.md  2026-03-25-bloom-renderer-design.md
src/: main.rs
src/cli/: mod.rs
src/events/: mod.rs  socket.rs  transcript.rs
src/model/: mod.rs  update.rs
src/render/: bloom.rs  footer.rs  mod.rs  tree_view.rs
